force field "radial distance" has no effect #43654

Closed
opened 2015-02-13 15:31:40 +01:00 by Ronny G · 16 comments

System Information
ubuntu 14.04, 630GT

Blender Version
Broken: 2.73

Short description of error

tube or cone radial -> use_maximum has no effect

setup

Screenshot_from_2015-02-13_14:05:23.png

alt+a

Screenshot_from_2015-02-13_14:07:40.png

the wind effect should be limited to the tube

Exact steps for others to reproduce the error

blend

tuberadialfield.blend

download the blend and hit alt+a

**System Information** ubuntu 14.04, 630GT **Blender Version** Broken: 2.73 **Short description of error** tube or cone radial -> use_maximum has no effect setup ![Screenshot_from_2015-02-13_14:05:23.png](https://archive.blender.org/developer/F143177/Screenshot_from_2015-02-13_14_05_23.png) alt+a ![Screenshot_from_2015-02-13_14:07:40.png](https://archive.blender.org/developer/F143178/Screenshot_from_2015-02-13_14_07_40.png) the wind effect should be limited to the tube **Exact steps for others to reproduce the error** blend [tuberadialfield.blend](https://archive.blender.org/developer/F143181/tuberadialfield.blend) download the blend and hit alt+a
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @nudelZ

Added subscriber: @nudelZ

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Bastien Montagne self-assigned this 2015-02-13 17:13:04 +01:00

Maximum distance works perfectly, as you can see by putting your force field away enough from your particles, it won't affect them at all.

But once your particles have gained energy from a force, they won't loose it at all in Blender's ideal world, so they will just keep going on forever. Unless you add them some damping, of course… ;)

Anyway, thanks for the report, but no bug at all here.

Maximum distance works perfectly, as you can see by putting your force field away enough from your particles, it won't affect them at all. But once your particles have gained energy from a force, they won't loose it at all in Blender's ideal world, so they will just keep going on forever. Unless you add them some damping, of course… ;) Anyway, thanks for the report, but no bug at all here.
Author

it doesnt work here mont29

there is no force except the field and the force should be limited to the tube?

can you show me a screenshot or video?

edit:

with shape set to "point" it works but not with "plane"!

it doesnt work here mont29 there is no force except the field and the force should be limited to the tube? can you show me a screenshot or video? edit: with shape set to "point" it works but not with "plane"!

Added subscriber: @zeauro

Added subscriber: @zeauro

Nutel is probably talking about radial or angular maximum distance for Tube or Cone, not maximum distance for z axis.

I think that is a known limitation.
This kind of fall-off shape only works for Point force field and not for Plane Force Field.

Nutel is probably talking about radial or angular maximum distance for Tube or Cone, not maximum distance for z axis. I think that is a known limitation. This kind of fall-off shape only works for Point force field and not for Plane Force Field.

Added subscriber: @GottfriedHofmann

Added subscriber: @GottfriedHofmann

mont29, I can confirm the issue. Only the +/- Z maximum is working, not the radial maximum in the tube falloff.

Note: This bug was already raised years ago at Blender conference during my smoke simulation masterclass.

mont29, I can confirm the issue. Only the +/- Z maximum is working, not the radial maximum in the tube falloff. Note: This bug was already raised years ago at Blender conference during my smoke simulation masterclass.

Changed status from 'Archived' to: 'Open'

Changed status from 'Archived' to: 'Open'
Bastien Montagne removed their assignment 2015-02-13 21:31:28 +01:00
Lukas Tönne was assigned by Bastien Montagne 2015-02-13 21:31:28 +01:00

Added subscriber: @mont29

Added subscriber: @mont29

Ok, my bad, closed that one too quickly.

Still, from a quick look to the code, I think there is no bug here, 'plane' shape simply cannot work with radial imho. Do not know that code well, though, so assigning to Lukas to get authorized opinion here. :)

Ok, my bad, closed that one too quickly. Still, from a quick look to the code, I think there is no bug here, 'plane' shape simply cannot work with radial imho. Do not know that code well, though, so assigning to Lukas to get authorized opinion here. :)
Member

Effectors are a mystery.

They have 2 different vectors to determine "distance":

  1. from the center to the particle
  2. from the center plane, orthogonal to the direction, to the particle

The radial distance should be determined by subtracting the normal component of the 1st vector - but the code actually uses the 2nd version instead, which has no radial component in the first place ...

I could try to fix this, but at the expense of breaking every existing setup (as usual...). sigh

Effectors are a mystery. They have 2 different vectors to determine "distance": 1) from the center to the particle 2) from the center plane, orthogonal to the direction, to the particle The *radial distance* should be determined by subtracting the normal component of the 1st vector - but the code actually uses the 2nd version instead, which has no radial component in the first place ... I could try to fix this, but at the expense of breaking every existing setup (as usual...). *sigh*

Don't bother breaking things - there was another user at a Blender conference (I guess it was 2011) who also wanted this fixed.

Don't bother breaking things - there was another user at a Blender conference (I guess it was 2011) who also wanted this fixed.

This issue was referenced by f4d8ce9781

This issue was referenced by f4d8ce97810476d0f0bf27809ab411081f0042f8
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
6 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#43654
No description provided.