Fix T43654: Radial distance for force fields was computed using the `vec_to_point` vector, which already has the radial component removed.